Fixed left-side settings spacing

--- a/less/actors.less
+++ b/less/actors.less
@@ -966,6 +966,13 @@
       margin: 0;
     }
 
+    .spell-settings > .flexcol {
+      height: min-content;
+      > *:not(:last-child) > {
+        margin-bottom: 2px;
+      }
+    }
+
     .spell-points-current {
       flex: 0;
 
